# gwBenchmarks

./: .gitignore  README.md  RG_FINITE_SIZE_BENCHMARKS.md  environment.yml  pyproject.toml
benchmarks/: results_summary.md
benchmarks/finite_size_waveform_benchmark/: README.md  plot_all_models_violin.py  score_candidate.py
benchmarks/finite_size_waveform_source_packet/: README.md
benchmarks/rg_waveform_benchmark/: README.md  plot_all_models_violin.py  score_candidate.py
benchmarks/rg_waveform_source_packet/: 2602.08833_relevant_formulas.md  README.md  prompt_source_packet_no_skills.md
beyond_GR_bench/: README.md  results_summary.md
beyond_GR_bench/agent_outputs/: README.md
configs/: analytic.yaml  dynamics.yaml  new_physics.yaml  remnant.yaml  ringdown.yaml  template_bank.yaml  validity.yaml  waveform.yaml
datasets/: README.md
docs/: index.html  results.json  update_results.py  violin_data.json
docs/rg_tail/: README.md  (+1 more)
gwbenchmarks/: __init__.py  metrics.py  plot_settings.py  rg_tail_reference.py  runner.py  scoring.py
llm_agents/: README.md  evaluate_template_bank.py  generate_prompt.py  recompute_fd_mismatch.py  recompute_fd_mismatch_v2.py  recompute_fd_mismatch_v3.py  recompute_per_sample.py  recompute_remnant_validity_ringdown.py  run_analytic_model.py  run_dynamics_model.py  run_ringdown_model.py  run_validity_model.py  update_dynamics_changelog.py  update_ringdown_changelog.py  update_validity_changelog.py
llm_behaviours/: benchmark_audit.txt  info_1.txt  info_2.txt  info_3.txt  waveform_audit.txt
results/: README.md  TEMPLATE_CHANGELOG.md
(+814 files in other folders)
