[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gwbenchmarks"
version = "0.1.0"
description = "Benchmark suite for evaluating LLM-based gravitational wave modelling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Tousif Islam", email = "tousifislam24@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "pyyaml>=6.0",
    "h5py>=3.7",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
gemini = ["google-generativeai>=0.8"]
llm = ["anthropic>=0.40", "openai>=1.50", "google-generativeai>=0.8"]
pycbc = ["pycbc>=2.3"]
all = ["anthropic>=0.40", "openai>=1.50", "pycbc>=2.3", "google-generativeai>=0.8"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["gwbenchmarks*"]
